# marketplace-app

./: GETTINGSTARTED.md  README.md  SCHEMATICS.md
backend/: Cargo.toml  build.rs
backend/src/: server.rs
backend/src/utils/: mod.rs
frontend/: .gitignore  package.json
shared/proto/: README.md  cart.proto  payment.proto  product.proto  user.proto
