[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
dotenv = "0.15.0"
prost = "0.12.3"
sqlx = "0.7.3"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
tonic = "0.10.2"

[build-dependencies]
glob = "0.3.1"
tonic-build = "0.10.2"
